--- a/tp1/index.html
+++ b/tp1/index.html
@@ -1,33 +1,81 @@
-<!doctype html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>TP1</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>CV</title>
+</head>
 
-        <link rel="apple-touch-icon" href="apple-touch-icon.png">
-        <!-- Place favicon.ico in the root directory -->
+<body style="margin:auto 300px;">
+<table width="100%" border=1>
+	<tr>
+		<td>Abderrahim REBHAOUI</td> <td>Célibataire</td> 
+	</tr>
 
-        <style>
-          body{
-              background-color: #e9ebee;              
-              font-family: system, -apple-system, ".SFNSText-Regular", "San Francisco", "Roboto", "Segoe UI", "Helvetica Neue", "Lucida Grande", sans-serif;
-              font-size: 16px;
-              margin: 0 auto;
-              max-width: 800px;              
-          }
-        </style>
-        
-        <!-- Code à dé-commenter si besoin de fichier CSS ou JS -->
-        <!--<link rel="stylesheet" href="style.css">-->
-        <!--<script src="main.js"></script>-->
-    </head>
-    <body>        
-        <h1>TP1 </h1>
-        <!-- Add your site or application content here -->
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-        <img src="../galilee.png" alt="Logo Galilee"/>
-    </body>
+	<tr>
+		<td> 02 rue geroges charpak, 92160,Antony.</td> <td>Permis B</td> 
+	</tr>
+	<tr>
+		<td><a href="">rebhaoui_abderrahim@hotmail.fr</a></td> <td></td>
+	</tr>
+	<tr>
+		<td>Mobile: +33751071113</td> <td></td>
+	</tr>
+	</table>
+	<h1 style="text-align:center; font-size:40px"> Ingénieur d'étude et développement</h1>
+	<h1>Formations</h1>
+	<table width=100% border=1>
+		<tr>
+			<td>2016</td> <td> <a href="#">Master 3IR</a> à l'université Paris XIII </td>
+		</tr>
+		<tr>
+			<td>2014</td> <td> <a href="#">Licence en telecom</a> à l'université Paris XIII </td>
+		</tr>
+		<tr>
+			<td>2011</td> <td>Bac S </td>
+		</tr>
+	</table>
+	<h1>Compétences</h1>
+	<table width=100% border=1>
+		<tr>
+			<td>Développement</td> <td> JAVA 7, HTML</td>
+		</tr>
+		<tr>
+			<td>Base de données</td> <td>MySQL, PostgreSQL</td></td>
+		</tr>
+		<tr>
+			<td>Réseaux</td> <td>IPV6, LAN, WIFI </td>
+		</tr>
+		<tr>
+			<td>Langues</td> <td>Anglais : bilingue, Français : langue matérnelle </td>
+		</tr>
+	</table>
+<h1>Expérience</h1>
+<table width=100% border=1>
+		<tr>
+			<td>2016</td> <td>Stage de fin d'étude chez <img style="width:40px; height:40px;" src="https://upload.wikimedia.org/wikipedia/commons/c/c8/Orange_logo.svg" alt="log orange"></td> 
+		</tr>
+		<tr>
+			<td>2014</td> <td>  Stage chez  <img style="width:40px; height:40px;" src="https://pbs.twimg.com/profile_images/756032696866967552/m7JCT5kB_400x400.jpg" alt="Logo edf"></td>
+		</tr>
+		<tr>
+			<td>2011</td> <td>Bac S </td>
+		</tr>
+	</table>
+	<h1> Centres d'intérêts</h1>
+	<table width=100% border=1>
+		<tr>
+			<td>Sport</td> <td>Running, Volley-bal</td>
+		</tr>
+		<tr>
+			<td>Culture</td> <td>Cinema, Musée</td>
+		</tr>
+		<tr>
+			<td>voyage</td> <td>Angleterre, Espagne</td>
+		</tr>
+	</table>
+	<h1 style="text-align:center; font-size:18px;"> TP1 : CV</h1>
+</body>
+
+
+
 </html>
