--- a/tp1/index.html
+++ b/tp1/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+<link rel="stylesheet" href="style.css">
 <head>
 	<meta charset="UTF-8">
 	<title>CV</title>
 </head>
 
-<body style="margin:auto 300px;">
+<body >
 <table width="100%" border=1>
 	<tr>
 		<td>Abderrahim REBHAOUI</td> <td>Célibataire</td> 
@@ -25,10 +26,10 @@
 	<h1>Formations</h1>
 	<table width=100% border=1>
 		<tr>
-			<td>2016</td> <td> <a href="#">Master 3IR</a> à l'université Paris XIII </td>
+			<td>2016</td> <td> <a href="formations.html">Master 3IR</a> à l'université Paris XIII </td>
 		</tr>
 		<tr>
-			<td>2014</td> <td> <a href="#">Licence en telecom</a> à l'université Paris XIII </td>
+			<td>2014</td> <td> <a href="formations.html">Licence en telecom</a> à l'université Paris XIII </td>
 		</tr>
 		<tr>
 			<td>2011</td> <td>Bac S </td>
