--- a/tp6/index.html
+++ b/tp6/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>MeteoAngular</title>
-  <base href="/build/">  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="/build/favicon.ico">
 </head>
 <body>
