--- a/tp6/index.html
+++ b/tp6/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>MeteoAngular</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="build/favicon.ico">
 </head>
 <body>
   <app-root></app-root>
