--- a/tp6/index.html
+++ b/tp6/index.html
@@ -9,5 +9,5 @@
 <body>
   <app-root></app-root>
   
-<script src="build/runtime-es2015.js" type="module"></script><script src="build/runtime-es5.js" nomodule defer></script><script src="build/polyfills-es5.js" nomodule defer></script><script src="polyfills-es2015.js" type="module"></script><script src="styles-es2015.js" type="module"></script><script src="styles-es5.js" nomodule defer></script><script src="vendor-es2015.js" type="module"></script><script src="vendor-es5.js" nomodule defer></script><script src="main-es2015.js" type="module"></script><script src="main-es5.js" nomodule defer></script></body>
+<script src="build/runtime-es2015.js" type="module"></script><script src="build/runtime-es5.js" nomodule defer></script><script src="build/polyfills-es5.js" nomodule defer></script><script src="build/polyfills-es2015.js" type="module"></script><script src="build/styles-es2015.js" type="module"></script><script src="build/styles-es5.js" nomodule defer></script><script src="build/vendor-es2015.js" type="module"></script><script src="build/vendor-es5.js" nomodule defer></script><script src="build/main-es2015.js" type="module"></script><script src="build/main-es5.js" nomodule defer></script></body>
 </html>
