--- a/tp6/index.html
+++ b/tp6/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>MeteoAngular</title>
+  <title>MeteoAngular hiro</title>
   <base href="/build/">  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="">
 </head>
