--- a/tp6/index.html
+++ b/tp6/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>MeteoAngular</title>
-  <base href="/build/">  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <title>MeteoAngular 2</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/x-icon" href="/build/favicon.ico">
 </head>
 <body>
   <app-root></app-root>
