--- a/tp6/dist1/meteo-angular/index.html
+++ b/tp6/dist1/meteo-angular/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>MeteoAngular</title>
+  <title>MeteoAngular dist</title>
   <base href="/aw3ir/tp6/meteo-angular/build/">  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
